--- a/my-first-html/index.html
+++ b/my-first-html/index.html
@@ -7,5 +7,50 @@
     <meta name="author" content="Dmitry Kolesnikov" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+      <header>
+          <h1>Dmitry Kolesnikov</h1>
+      </header>
+      <maim>
+          <article>
+              <h2>Profile</h2>
+          </article>
+          <article>
+              <h2>Experience:</h2>
+              <section>
+                <h3>01.05.2021 – 31.10.2021 Nipson GmbH - Verkaufsinnendienst und Logistik</h3>
+              </section>
+              <section>
+                <h3>01.10.2020 – 30.04.2021 LPR GmbH - Disponent für Servicetechniker</h3>
+             </section>
+             <section>
+                 <h3>08.04.2019 – 30.09.2020 Experis IT Services - IT-Disponent</h3>
+             </section>
+             <section>
+                 <h3>10.04.2017 – 31.03.2019 Lasten Taxi - Disponent und Fahrer</h3>
+             </section>
+             <section>
+                 <h3>03.06.2016 – 09.04.2017 Teleperformance - Apple Advisor (1st Level IT-Support)</h3>
+             </section>
+             <section>
+                 <h3>2012 – 2017 Freiberufliche Tätigkeit als Videohersteller/ YouTube Blogger bei Google</h3>
+             </section>
+          </article>
+          <article>
+              <h2>Skills:</h2>
+              <section>
+                  <h3>Soft Skills</h3>
+              </section>
+              <section>
+                  <h3>Technical Skills</h3>
+              </section>
+          </article>
+          <article>
+              <h2>Contact:</h2>
+              <section>
+                  <h3>dim.kolesnikov@gmail.com</h3>
+              </section>
+          </article>
+      </maim>
+  </body>
 </html>
