--- a/my-first-html/index.html
+++ b/my-first-html/index.html
@@ -10,30 +10,68 @@
   <body>
       <header>
           <h1>Dmitry Kolesnikov</h1>
+          <p>Future Junior Web Developer</p>
       </header>
       <maim>
           <article>
               <h2>Profile</h2>
+              <p>Hello together! My main target fo the next <em>3</em> months to become a <strong> junior web developer.</strong> </p>
           </article>
           <article>
               <h2>Experience:</h2>
               <section>
-                <h3>01.05.2021 – 31.10.2021 Nipson GmbH - Verkaufsinnendienst und Logistik</h3>
+                  <header>
+                <h3>Nipson GmbH - Verkaufsinnendienst und Logistik</h3>
+                <p>01.05.2021 – 31.10.2021</p>
+                  </header>
+                  <p>
+                     Here I can tell you about this job, what I did and my responsibility. The job was nice.
+                  </p>
               </section>
               <section>
-                <h3>01.10.2020 – 30.04.2021 LPR GmbH - Disponent für Servicetechniker</h3>
+                  <header>
+                <h3>LPR GmbH - Disponent für Servicetechniker</h3>
+                <p>01.10.2020 – 30.04.2021</p>
+                  </header>
+                  <p>
+                     Here I can tell you about this job, what I did and my responsibility. The job was nice.
+                  </p>
              </section>
              <section>
-                 <h3>08.04.2019 – 30.09.2020 Experis IT Services - IT-Disponent</h3>
+                 <header>
+                 <h3>Experis IT Services - IT-Disponent</h3>
+                 <p>08.04.2019 – 30.09.2020</p>
+                 </header>
+                 <p>
+                     Here I can tell you about this job, what I did and my responsibility. The job was nice.
+                 </p>
              </section>
              <section>
-                 <h3>10.04.2017 – 31.03.2019 Lasten Taxi - Disponent und Fahrer</h3>
+                 <header>
+                 <h3>Lasten Taxi - Disponent und Fahrer</h3>
+                 <p>10.04.2017 – 31.03.2019</p>
+                </header>
+                <p>
+                     Here I can tell you about this job, what I did and my responsibility. The job was nice.
+                </p>
              </section>
              <section>
-                 <h3>03.06.2016 – 09.04.2017 Teleperformance - Apple Advisor (1st Level IT-Support)</h3>
+                 <header>
+                 <h3>Teleperformance - Apple Advisor (1st Level IT-Support)</h3>
+                 <p>03.06.2016 – 09.04.2017</p>     
+                </header>
+                <p>
+                     Here I can tell you about this job, what I did and my responsibility. The job was nice.
+                </p>
              </section>
              <section>
-                 <h3>2012 – 2017 Freiberufliche Tätigkeit als Videohersteller/ YouTube Blogger bei Google</h3>
+                 <header>
+                 <h3>Freiberufliche Tätigkeit als Videohersteller/ YouTube Blogger bei Google</h3>
+                 <p>2012 – 2017</p>
+                </header>
+                <p>
+                    Here I can tell you about this job, what I did and my responsibility. The job was nice.
+                </p>
              </section>
           </article>
           <article>
