--- a/my-first-html/index.html
+++ b/my-first-html/index.html
@@ -11,13 +11,19 @@
       <header>
           <h1>Dmitry Kolesnikov</h1>
           <p>Future Junior Web Developer</p>
+          <nav>
+              <a href="#profile">Profile</a>
+              <a href="#experience">Experience</a>
+              <a href="#skills">Skills</a>
+              <a href="#contact">Contact</a>
+          </nav>
       </header>
       <maim>
-          <article>
+          <article id="profile">
               <h2>Profile</h2>
-              <p>Hello together! My main target fo the next <em>3</em> months to become a <strong> junior web developer.</strong> </p>
+              <p>Hello together! My main target for the next <em>3</em> months to become a <strong> junior web developer.</strong> </p>
           </article>
-          <article>
+          <article id="experience">
               <h2>Experience:</h2>
               <section>
                   <header>
@@ -74,7 +80,7 @@
                 </p>
              </section>
           </article>
-          <article>
+          <article id="skills">
               <h2>Skills:</h2>
               <section>
                   <h3>Soft Skills</h3>
@@ -83,7 +89,7 @@
                   <h3>Technical Skills</h3>
               </section>
           </article>
-          <article>
+          <article id="contact">
               <h2>Contact:</h2>
               <section>
                   <h3>dim.kolesnikov@gmail.com</h3>
