--- a/my-first-html/index.html
+++ b/my-first-html/index.html
@@ -84,15 +84,37 @@
               <h2>Skills:</h2>
               <section>
                   <h3>Soft Skills</h3>
+                  <ul>
+                      <li>Team-oriented</li>
+                      <li>Customer friendly</li>
+                      <li>Empathy</li>
+                      <li>Creative thinking</li>
+                  </ul>
               </section>
               <section>
                   <h3>Technical Skills</h3>
+                  <ul>
+                      <li>HTML and CSS</li>
+                      <li>JavaScript and TypeScript</li>
+                      <li>Angular and Vue.js</li>
+                  </ul>
               </section>
           </article>
           <article id="contact">
               <h2>Contact:</h2>
-              <section>
-                  <h3>dim.kolesnikov@gmail.com</h3>
+              <ol>
+                  <li>
+                      Email:
+                      <a href="dim.kolesnikov@gmail.com">dim.kolesnikov@gmail.com</a>
+                  </li>
+                  <li>
+                      Phone:
+                      <a href="+4917643494443">+4917643494443</a>
+                  </li>
+                  <li>XING:
+                      <a href="https://www.xing.com/profile/Dmitry_Kolesnikov3/cv">Dmitry Kolesnikov</a>
+                  </li>
+                </ol>  
               </section>
           </article>
       </maim>
