--- a/my-first-html/index.html
+++ b/my-first-html/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Mein CV"/>
     <meta name="author" content="Dmitry Kolesnikov" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="index.css">
     <title>Document</title>
   </head>
   <body>
@@ -72,7 +77,7 @@
              </section>
              <section>
                  <header>
-                 <h3>Freiberufliche Tätigkeit als Videohersteller/ YouTube Blogger bei Google</h3>
+                 <h3>Freiberufliche Tätigkeit als Videohersteller / YouTube Blogger bei Google</h3>
                  <p>2012 – 2017</p>
                 </header>
                 <p>
