mit css verschönert

--- a/my-first-html/index.html
+++ b/my-first-html/index.html
@@ -10,10 +10,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="index.css">
-    <title>Document</title>
+    <title>CV of Dmitry</title>
   </head>
   <body>
-      <header>
+      <header class="name" >
           <h1>Dmitry Kolesnikov</h1>
           <p>Future Junior Web Developer</p>
           <nav>
@@ -23,7 +23,7 @@
               <a href="#contact">Contact</a>
           </nav>
       </header>
-      <maim>
+      <main class="other">
           <article id="profile">
               <h2>Profile</h2>
               <p>Hello together! My main target for the next <em>3</em> months to become a <strong> junior web developer.</strong> </p>
