--- a/my-first-html/index.html
+++ b/my-first-html/index.html
@@ -17,16 +17,16 @@
           <h1>Dmitry Kolesnikov</h1>
           <p>Future Junior Web Developer</p>
           <nav>
-              <a href="#profile">Profile</a>
-              <a href="#experience">Experience</a>
-              <a href="#skills">Skills</a>
-              <a href="#contact">Contact</a>
+              <a class="link-oben" href="#profile">Profile</a>
+              <a class="link-oben" href="#experience">Experience</a>
+              <a class="link-oben" href="#skills">Skills</a>
+              <a class="link-oben" href="#contact">Contact</a>
           </nav>
       </header>
       <main class="other">
           <article id="profile">
               <h2>Profile</h2>
-              <p>Hello together! My main target for the next <em>3</em> months to become a <strong> junior web developer.</strong> </p>
+              <p>Hello together! My main target for the next 3 months to become a <strong> junior web developer.</strong> </p>
           </article>
           <article id="experience">
               <h2>Experience:</h2>
@@ -50,7 +50,7 @@
              </section>
              <section>
                  <header>
-                 <h3>Experis IT Services - IT-Disponent</h3>
+                 <h3>Experis IT Services - IT Disponent</h3>
                  <p>08.04.2019 – 30.09.2020</p>
                  </header>
                  <p>
@@ -90,6 +90,7 @@
               <section>
                   <h3>Soft Skills</h3>
                   <ul>
+                      <li>Communicable</li>
                       <li>Team-oriented</li>
                       <li>Customer friendly</li>
                       <li>Empathy</li>
@@ -102,6 +103,7 @@
                       <li>HTML and CSS</li>
                       <li>JavaScript and TypeScript</li>
                       <li>Angular and Vue.js</li>
+                      <li>Different ticket systems<br><small>(ServiceNow,SAP,HS and other)</small></li>
                   </ul>
               </section>
           </article>
@@ -122,6 +124,6 @@
                 </ol>  
               </section>
           </article>
-      </maim>
+      </main>
   </body>
 </html>
