change of Monday

--- a/my-first-html/index.html
+++ b/my-first-html/index.html
@@ -6,6 +6,10 @@
     <meta name="description" content="Mein CV"/>
     <meta name="author" content="Dmitry Kolesnikov" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/normalize.css@8.0.1/normalize.css"
+    />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
 
@@ -15,7 +19,7 @@
   <body>
       <header class="name" >
           <h1>Dmitry Kolesnikov</h1>
-          <p>Future Junior Web Developer</p>
+          <p>Future Junior Web Developer👨🏻‍💻</p>
           <nav>
               <a class="link-oben" href="#profile">Profile</a>
               <a class="link-oben" href="#experience">Experience</a>
@@ -36,7 +40,7 @@
                 <p>01.05.2021 – 31.10.2021</p>
                   </header>
                   <p>
-                     Here I can tell you about this job, what I did and my responsibility. The job was nice.
+                     Here I can tell you about this job, what I did and my responsibility. The job was nice. I am happy. Do you have any quetions?
                   </p>
               </section>
               <section>
